--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
